--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /MWF/Database/Recieptt.db
+/MWF/wwwroot/Database/Recieptt.db
