--- a/MWF/MWF.csproj
+++ b/MWF/MWF.csproj
@@ -15,6 +15,9 @@
     <Content Remove="Pages\NewFolder\Home.cshtml" />
     <Content Remove="Pages\Qurbani2023.razor" />
     <Content Remove="Pages\Ramadan Ration.razor" />
+    <Content Remove="wwwroot\Database\Reciept.db" />
+    <Content Remove="wwwroot\Database\Recieptt.db" />
+    <Content Remove="wwwroot\OutputFiles\Sample.pdf" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,12 +25,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\Database\" />
     <Folder Include="wwwroot\GalaryPic\food\" />
     <Folder Include="wwwroot\GalaryPic\well\" />
     <Folder Include="wwwroot\GalaryPic\pump\" />
     <Folder Include="wwwroot\GalaryPic\Sadqa Bakra\" />
     <Folder Include="wwwroot\GalaryPic\Qurbani 2023\" />
     <Folder Include="wwwroot\GalaryPic\Qurani Makatib\" />
+    <Folder Include="wwwroot\OutputFiles\" />
   </ItemGroup>
 
   <ItemGroup>
