--- a/MWF/MWF.csproj
+++ b/MWF/MWF.csproj
@@ -15,9 +15,6 @@
     <Content Remove="Pages\NewFolder\Home.cshtml" />
     <Content Remove="Pages\Qurbani2023.razor" />
     <Content Remove="Pages\Ramadan Ration.razor" />
-    <Content Remove="wwwroot\Database\Reciept.db" />
-    <Content Remove="wwwroot\Database\Recieptt.db" />
-    <Content Remove="wwwroot\OutputFiles\Sample.pdf" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,14 +22,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Database\" />
     <Folder Include="wwwroot\GalaryPic\food\" />
     <Folder Include="wwwroot\GalaryPic\well\" />
     <Folder Include="wwwroot\GalaryPic\pump\" />
     <Folder Include="wwwroot\GalaryPic\Sadqa Bakra\" />
     <Folder Include="wwwroot\GalaryPic\Qurbani 2023\" />
     <Folder Include="wwwroot\GalaryPic\Qurani Makatib\" />
-    <Folder Include="wwwroot\OutputFiles\" />
+    <Folder Include="wwwroot\Reports\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -59,8 +55,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ReportingServices.ReportViewerControl.WebForms" Version="150.1652.0" />
-    <PackageReference Include="ReportViewerCore.NETCore" Version="15.1.22" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
   </ItemGroup>
 
